--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ target/
 
 # pyenv
 .python-version
-
+*.model
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
