--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Virtual Environments
 .venv/
 
+*/pretrained_models/*
 # Created by https://www.gitignore.io/api/python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=python,jupyternotebooks
 
