--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Virtual Environments
 .venv/
-
-*/pretrained_models/*
 # Created by https://www.gitignore.io/api/python,jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=python,jupyternotebooks
 
@@ -87,7 +85,10 @@ target/
 
 # pyenv
 .python-version
+
+# pre trained models
 *.model
+*.npy
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
